--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://sumit:sumit123@properbackendproject.llirh.mongodb.net
 CORS_ORIGIN= *
+ACCESS_TOKEN_SECRET=vandna_sungar
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=vandna_sungar
+REFRESH_TOKEN_EXPIRY=10d
